--- a/papers/D3.1/D3_1.tex
+++ b/papers/D3.1/D3_1.tex
@@ -106,22 +106,23 @@ This document provides the description of the multi-objective test suite that ha
 
 \chapter{Introduction}
 \section{Multi-objective planning}
-Most real-world applications are multi-objective by nature. XXX
+Most real-world applications are multi-objective by nature. Typical situations in real-life involve some quality criterion associated with some cost -- and quality and cost are always contradictory objectives. In temporal planning for instance, the goal is to minimize the duration of a given plan: the quality is the makespan. But in real life, going fast has a cost, and very often it is possible to decrease the cost only at the expense of the duration. In such situations, the goal of optimization is not to find the best solution: only the decision-maker can decide what is best: going very fast at a very high cost, or going a little slower, but at a much lower cost. The name of the game then becomes {\em multi-objective optimization} and the goal is to provide the decision-maker with the best set of options from which to choose from, what is called Pareto-optimal solutions, i.e. such solutions that no other solution is better on all objectives.
 
+However, very little attention has been paid in the AI Planning community to multi-objective  -- despite the fact that most real-life planning problems are, like other real problems, multi-objective by nature. One reason for that proably comes from the history of planners, that have been derived from AI methods like constraint programming, graph theory, and the like - domains where a single objective is mandatory. As a consequence, even though multi-objective planning problems begin to raise some interest, there exist to-date no benchmark of multi-objective AI planning problems. This is in high constrast with the single-objective case: due to the very high success of the International Planning Competitions (IPC) over the years, a very large body of benchmark problems has been validated and adopted by the whole AI Planning community.
+
+One of the goals of the DESCARWIN project is to provide the first bricks of a similar testbed for multi-objective planning optimization -- and this deliverable is a first step in that direction.
 
 \section{Survey of proposed approaches}
 Two different approaches have been used to design a first benchmark suite for multi-objective AI planning. Firstly, starting from a very simple toy problem inspired by the {\tt zeno} logisitic domain of all IPCs (probably the most widely used domain, including 30 instances of increasing difficulty), a series of problems have been design, with parameterized complexity, and for which the exact Pareto front can be easily exactly known (at least for the simplest instances). Because the domain pertains to logistic, the first (main?) objective remains the total duration of the resulting plan. A second objective has been introduced, and two different types of objectives have been proposed: a ``cost'', for which every segment of transportation has a given cost, and the total cost is the sum of all costs, and a ``risk'' for which every segment has a given risk, and the total risk is the maximum encountered risk during the execution of the plan.
 
 Secondly, the huge reservoir of domains that have been carefully tuned over the years by the IPC competitions contains many good candidate domains for ``multi-objectivization``, and based on the semantics of those domains, we have proposed ad hoc extensions of these domains to multi-objective setting.
 
-\section{PPDL, a quick introduction}
-XXX
 
 \chapter{Zeno-based 'toy' problems}
 \section{The (single-objective) zeno domain}
 This Section describes the simple problems derived from the {\tt zeno} single-objective domain, probably the most well-know domain of AI planning after the STRIP block world, that has been present in all IPC competitions since the beginning. 
 
-The {\tt zeno} domain involves persons, cities and planes. States describe in which city each person and each plane is located (predicate {\tt at} with two arguments, a city and a person or a plane), and the fuel-level of each plane. Actions allow persons to bord/unboard a plane, planes to travel from one city to another (with whoever is on-board), either fast (and consuming a lot of fuel) or slowly (with low fuel consumption), and planes to refuel. All actions have a duration. See Annex \ref{XXX} for the domain file.
+The {\tt zeno} domain involves persons, cities and planes. States describe in which city each person and each plane is located (predicate {\tt at} with two arguments, a city and a person or a plane), and the fuel-level of each plane. Actions allow persons to bord/unboard a plane, planes to travel from one city to another (with whoever is on-board), either fast (and consuming a lot of fuel) or slowly (with low fuel consumption), and planes to refuel. All actions have a duration. See Annex \ref{zenoMultiDomain} for the domain file.
 
 We will use here a simplified {\tt zeno} domain, where there is no fuel level, no boarding/unboarding actions. This simple domain (for single objective optimization) is written in PPDL as follows. There are only 2 actions, {\tt fly} and {\tt flyVide} that move the planes with or without a passenger, and the preconditions and effects of the actions are rather straightforward.
 
@@ -190,7 +191,7 @@ Note that the initial goal contains the definitions of the duration (through ''f
 
 
 \section{The multi-objective zeno domain}
-
+\label{sec:simpleZenoMulti}
 \begin{figure}[tb!]
   \begin{center}
  \includegraphics[width=0.5\textwidth]{miniMulti.eps}
@@ -206,7 +207,7 @@ This section will detail the simple domain for multi-objective temporal planning
 \subsection{The simple multi-objective zenoTravel3 problem}
 In order to turn this problem into a not-too-unrealistic multi-objective problem, there are now 3 possible intermediate cities, with different travel time to the two outer cities (0 and 4 in the example of Figure \ref{fig:multiZeno}), and another objective is added, that is increased when landing on any of the 3 central cities (cities 1 to 3 in the same example). In order to make the objective contradictory, this second objective varies inversely to the first one, being large for city1 that is fast to reach, and small for city3 to where travel takes more time. There are however (at least) two ways to take this objective into account during a complete plan, that lead to two types of problems: In the \MULTIZENO$_{Cost}$, the second objective is similar to a cost, i.e. is increased additively: each plane has to pay the corresponding tax every time it lands one of the taxed cities; In the \MULTIZENO$_{Risk}$, the second objective is similar to a risk, and the maximal value encountered during the complete execution of a plan is to be minimized. 
 
-In both cases however, there are 3 obvious points that belong to the Pareto Front: the solution with minimal makespan described in the single-objective case, going from city0 to city4 through city1, and the similar solutions that use respectively {\tt city2} and {\tt city3} in lieu of {\tt city1}. The values of the makespans are respectively 8, 16 and 24, and the values of the costs are, for each solution, 4 times the value of the single landing tax, and exactly the highest value in case of risk. For the risk case, there is no other point on the Pareto Front, as a single landing on a high-risk city sets the risk of the whole plan to that high risk. For the cost problem, however, there are other points on the Pareto Front, as different cities can be used for the different passengers. For instance, in the case of Figure \ref{fig:multiZeno}, this leads to a Pareto Front made of 5 points, (8,12), (16,8), and (24,4) (going only through {\tt city 1}, {\tt 2} and {\tt 3} respectively), plus (12,10) and (20,6).
+In both cases however, there are 3 obvious points that belong to the Pareto Front: the solution with minimal makespan described in the single-objective case, going from city0 to city4 through city1, and the similar solutions that use respectively {\tt city2} and {\tt city3} in lieu of {\tt city1}. The values of the makespans are respectively 8, 16 and 24, and the values of the costs are, for each solution, 4 times the value of the single landing tax, and exactly the highest value in case of risk. For the risk case, there is no other point on the Pareto Front, as a single landing on a high-risk city sets the risk of the whole plan to that high risk. For the cost problem, however, there are other points on the Pareto Front, as different cities can be used for the different passengers. For instance, in the case of Figure \ref{fig:multiZeno}, this leads to a Pareto Front made of 5 points, (8,12), (16,8), and (24,4) (going only through {\tt city 1}, {\tt 2} and {\tt 3} respectively), plus (12,10) and (20,6). It should be noted that these two Pareto-optimal solutions, like the 3 first 'elementary' solutions already mentionned, also use some tricky way to use all available resources: 
 
 \subsection{Multi-objective PDDL files}
 The PDDL files are modified to take into account the second objective. Fortunately, within PDDL 2.0, there already exists a mechanism to handle ''actions with cost`` - one of the recognized types of AI planning problems, in which each action has a cost, and the total cost is to be minimized. This mechanism was used here, hence avoiding the need to redefine any part of the PDDL language.
@@ -259,7 +260,7 @@ Of course, the number of planes could also be increased, but the number of passe
 
 \subsection{Modifying the shape of the Pareto Front}
 
-Another way to modify the difficulty of the problem without increasing its complexity is to tune the different values of the flight times and the cost/risk at each city. such changes will not modify the number of points on the Pareto Front, but will certainly change its shape in the objective space. For instance, 
+Another way to modify the difficulty of the problem without increasing its complexity is to tune the different values of the flight times and the cost/risk at each city. such changes will not modify the number of points on the Pareto Front, but will certainly change its shape in the objective space. For instance, simply modifying the cost $\alpha$ of {\tt city2}, the central city in Figure \ref{fig:multiZeno}, between 1 and 3 (the costs of respectively {\tt city1} and {\tt city3}), the Pareto Front, which is linear for $\alpha=2$ becomes strictly convex for $\alpha < 2$ and strictly concave for $\alpha > 2$, as can be seen on Figure \ref{fig:ParetoFronts}.
 
 
 \chapter{Multi-Objectivization of IPC domains}
@@ -357,7 +358,6 @@ A set of robots use different colors to paint patterns in floor tiles. The robot
 For the IPC set, robots need to paint a grid with black and white, where the cell color is alternated always. This particular configuration makes the domain hard because robots should only paint tiles in front of them, since painting tiles behind make the search to reach a dead-end.
 
 \subsection{\PARCPRINTER\ domain}
-\subsection{The domain}
 This domain models the operation of the multi-engine printer, for which one prototype is developed at the Palo Alto Research Center (PARC). This type of printer can handle multiple print jobs simultaneously. Multiple sheets, belonging to the same job or different jobs, can be printed simultaneously using multiple Image Marking Engines (IME). Each IME can either be color, which can print both color and black\&white images, or mono, which can only print black\&white image. Each sheet needs to go through multiple printer components such as feeder, transporter, IME, inverter, finisher and need to arrive at the finisher in order. Thus, sheet (n+1) needs to be stacked in the same finisher with sheet n of the same job, but needs to arrive at the finisher right after sheet n (no other sheet stacked in between those two consecutive sheets). Given that the IMEs are heterogeneous (mixture of color and mono) and can run at different speeds, optimizing the operation of this printer for a mixture of print jobs, each of them is an arbitrary mixture of color/b\&w pages that are either simplex (one-sided print) or duplex (two-sided print) is a hard problem. For the detail description of this domain and the continual online planner controlling it, please refer to the references listed at the end of this page.
 
 This domain is used in two tracks: sequential and temporal. The temporal track is the most natural fit due to the default objective function for the printer of maximizing its productivity, which equals to finish printing all print job requests as quickly as possible. For the sequential track, we use a more seldom used objective function of minimizing printing cost. For example, using a more expensive color IME to print a black\&white page costs more than using a mono IME. However, the cost tradeoff may not be clearcut if the feeder, where the blank sheets originally reside at is closer to the mono IME than to the color IME.
@@ -427,10 +427,343 @@ In both cases, XXXX
 
 
 
-\chapter{References}
-\bibliographystyle{plain}
-\bibliography{icaps10}
+% \chapter{References}
+% \bibliographystyle{plain}
+% \bibliography{icaps10}
+\begin{tiny}
 
+\Roman{section}    
+\setcounter{chapter}{6}
+\chapter*{Annexes: PDDL files}
+\section{\MULTIZENO\ PDDL domain file}
+\label{zenoMultiDomain}
+\begin{verbatim}(define (domain zeno-travel)
+(:requirements :strips :durative-actions :action-costs)
+(:predicates
+     (at ?x ?c) (aircraft ?p) (person ?x) (city ?x) (libre ?x)
+)
+(:functions (citythreat ?x) (timeTerre ?x ?y) (total-cost)
+)
+(:action fly
+ :parameters (?a ?c1 ?c2 ?x)
+ :duration (= ?duration (timeTerre ?c1 ?c2))
+ :precondition
+    (and (aircraft ?a) (city ?c1) (city ?c2)    
+             (at ?a ?c1) 
+             (person ?x) (at ?x ?c1) (libre ?a)
+        )
+ :effect
+    (and (at ?a ?c2) (not (at ?a ?c1)) 
+             (not (libre ?a)) (libre ?a) (not (at ?x ?c1)) (at ?x ?c2)
+         (increase (total-cost) (citythreat ?c2))
+        )
+)
+(:action flyVide
+ :parameters (?a ?c1 ?c2)
+ :duration (= ?duration (timeTerre ?c1 ?c2))
+ :precondition
+    (and (aircraft ?a) (city ?c1) (city ?c2) (at ?a ?c1) 
+        (libre ?a)
+        )
+ :effect
+    (and (at ?a ?c2) (not (at ?a ?c1))
+             (not (libre ?a)) (libre ?a)
+         (increase (total-cost) (citythreat ?c2))
+        )
+)
+)
+\end{verbatim}
+
+\section{A simple \MULTIZENO\ PDDL instance file}
+\label{zeno3-123-instance}
+This instance is a very simple exemple of a \MULTIZENO\ instance, with 3 passengers, 3 intermediate sities, 2 planes, and a linear Pareto Front (see Section \ref{sec:simpleZenoMulti}).
+\begin{verbatim}
+(define (problem ZTRAVEL-3-8)
+(:domain zeno-travel)
+(:objects
+    plane1
+    plane2
+    person1
+    person2
+    person3
+    city0
+    city1
+    city2
+    city3
+    city4
+    )
+(:init
+    (= (total-cost) 0)
+    (= (citythreat city0) 0)
+    (= (citythreat city1) 100)
+    (= (citythreat city2) 10)
+    (= (citythreat city3) 1)
+    (= (citythreat city4) 0)
+
+        (= (timeTerre city0 city1) 2)
+        (= (timeTerre city0 city2) 4)
+        (= (timeTerre city0 city3) 6)
+        (= (timeTerre city1 city4) 2)
+        (= (timeTerre city2 city4) 4)
+        (= (timeTerre city3 city4) 6)
+
+        (= (timeTerre city1 city0) 2)
+        (= (timeTerre city2 city0) 4)
+        (= (timeTerre city3 city0) 6)
+        (= (timeTerre city4 city1) 2)
+        (= (timeTerre city4 city2) 4)
+        (= (timeTerre city4 city3) 6)
+
+        (= (timeTerre city1 city2) 3)
+        (= (timeTerre city1 city3) 5)
+        (= (timeTerre city2 city3) 3)
+
+        (= (timeTerre city2 city1) 3)
+        (= (timeTerre city3 city1) 5)
+        (= (timeTerre city3 city2) 3)
+
+    (at plane1 city0)
+    (aircraft plane1)
+    (at plane2 city0)
+    (aircraft plane2)
+    (at person1 city0)
+    (person person1)
+    (at person2 city0)
+    (person person2)
+    (at person3 city0)
+    (person person3)
+    (city city0)
+    (city city1)
+    (city city2)
+    (city city3)
+    (city city4)
+        (libre plane1)
+        (libre plane2)
+)
+(:goal (and
+    (at person1 city4)
+    (at person2 city4)
+    (at person3 city4)
+    ))
+)
+\end{verbatim}
+
+\section{\ELEVATORS\ PDDL domain file}
+\begin{verbatim}
+; Sémantique temporelle conservative : on omet les modalités temporelles du bench original (YAHSP ne les traite pas)
+
+(define (domain elevators-tempo-cost)
+  (:requirements :typing :action-costs :durative-actions)
+  (:types     elevator - object 
+            slow-elevator fast-elevator - elevator
+               passenger - object
+              count - object
+         )
+
+(:predicates 
+    (passenger-at ?person - passenger ?floor - count)
+    (boarded ?person - passenger ?lift - elevator)
+    (lift-at ?lift - elevator ?floor - count)
+    (reachable-floor ?lift - elevator ?floor - count)
+    (above ?floor1 - count ?floor2 - count)
+    (passengers ?lift - elevator ?n - count)
+    (can-hold ?lift - elevator ?n - count)
+    (next ?n1 - count ?n2 - count)
+)
+
+(:functions (total-cost) - number
+            (travel-slow-cost ?f1 - count ?f2 - count) - number
+            (travel-fast-cost ?f1 - count ?f2 - count) - number 
+            (travel-slow-temp ?f1 - count ?f2 - count) - number
+            (travel-fast-temp ?f1 - count ?f2 - count) - number 
+)
+
+(:action move-up-slow
+  :parameters (?lift - slow-elevator ?f1 - count ?f2 - count )
+  :duration (= ?duration (travel-slow-temp ?f1 ?f2))
+  :precondition (and (lift-at ?lift ?f1) (above ?f1 ?f2 ) (reachable-floor ?lift ?f2) )
+  :effect (and (lift-at ?lift ?f2) (not (lift-at ?lift ?f1)) (increase (total-cost) (travel-slow-cost ?f1 ?f2))))
+
+(:action move-down-slow
+  :parameters (?lift - slow-elevator ?f1 - count ?f2 - count )
+  :duration (= ?duration (travel-slow-temp ?f2 ?f1))
+  :precondition (and (lift-at ?lift ?f1) (above ?f2 ?f1 ) (reachable-floor ?lift ?f2) )
+  :effect (and (lift-at ?lift ?f2) (not (lift-at ?lift ?f1)) (increase (total-cost) (travel-slow-cost ?f2 ?f1))))
+
+(:action move-up-fast
+  :parameters (?lift - fast-elevator ?f1 - count ?f2 - count )
+  :duration (= ?duration (travel-fast-temp ?f1 ?f2))
+  :precondition (and (lift-at ?lift ?f1) (above ?f1 ?f2 ) (reachable-floor ?lift ?f2) )
+  :effect (and (lift-at ?lift ?f2) (not (lift-at ?lift ?f1)) (increase (total-cost) (travel-fast-cost ?f1 ?f2))))
+
+(:action move-down-fast
+  :parameters (?lift - fast-elevator ?f1 - count ?f2 - count )
+  :duration (= ?duration (travel-fast-temp ?f2 ?f1))
+  :precondition (and (lift-at ?lift ?f1) (above ?f2 ?f1 ) (reachable-floor ?lift ?f2) )
+  :effect (and (lift-at ?lift ?f2) (not (lift-at ?lift ?f1)) (increase (total-cost) (travel-fast-cost ?f2 ?f1))))
+
+(:action board
+  :parameters (?p - passenger ?lift - elevator ?f - count ?n1 - count ?n2 - count)
+  :duration (= ?duration 1)
+  :precondition (and  (lift-at ?lift ?f) (passenger-at ?p ?f) (passengers ?lift ?n1) (next ?n1 ?n2) (can-hold ?lift ?n2) )
+  :effect (and (not (passenger-at ?p ?f)) (boarded ?p ?lift) (not (passengers ?lift ?n1)) (passengers ?lift ?n2) ))
+
+(:action leave 
+  :parameters (?p - passenger ?lift - elevator ?f - count ?n1 - count ?n2 - count)
+  :duration (= ?duration 1)
+  :precondition (and  (lift-at ?lift ?f) (boarded ?p ?lift) (passengers ?lift ?n1) (next ?n2 ?n1) )
+  :effect (and (passenger-at ?p ?f) (not (boarded ?p ?lift)) (not (passengers ?lift ?n1)) (passengers ?lift ?n2) ))
+  
+) 
+\end{verbatim}
+
+\section{\ELEVATORS\ PDDL instance file {\tt p01-p04-temp-cost.pddl}}
+% This is one of the simplest instances of the \ELEVATORS\ domain -- 2 fast and 2 slow elevators, for 25 passengers and 16 floors.
+\begin{tt}
+(define (problem elevators-time-cost-p01-p04)
+(:domain elevators-tempo-cost)
+
+(:objects 
+n0 n1 n2 n3 n4 n5 n6 n7 n8 n9 n10 n11 n12 n13 n14 n15 n16  - count
+p0 p1 p2 p3 p4 p5 p6 p7 p8 p9 p10 p11 p12 p13 p14 p15 p16 p17 p18 p19 p20 p21 p22 p23 p24 p25  - passenger
+fast0 fast1  - fast-elevator
+slow0-0 slow1-0 - slow-elevator
+)
+
+(:init
+(next n0 n1) (next n1 n2) (next n2 n3) (next n3 n4) (next n4 n5) (next n5 n6) (next n6 n7) (next n7 n8) (next n8 n9) (next n9 n10) (next n10 n11) (next n11 n12) (next n12 n13) (next n13 n14) (next n14 n15) (next n15 n16) 
+
+(above n0 n1) (above n0 n2) (above n0 n3) (above n0 n4) (above n0 n5) (above n0 n6) (above n0 n7) (above n0 n8) (above n0 n9) (above n0 n10) (above n0 n11) (above n0 n12) (above n0 n13) (above n0 n14) (above n0 n15) (above n0 n16) 
+(above n1 n2) (above n1 n3) (above n1 n4) (above n1 n5) (above n1 n6) (above n1 n7) (above n1 n8) (above n1 n9) (above n1 n10) (above n1 n11) (above n1 n12) (above n1 n13) (above n1 n14) (above n1 n15) (above n1 n16) 
+(above n2 n3) (above n2 n4) (above n2 n5) (above n2 n6) (above n2 n7) (above n2 n8) (above n2 n9) (above n2 n10) (above n2 n11) (above n2 n12) (above n2 n13) (above n2 n14) (above n2 n15) (above n2 n16) 
+(above n3 n4) (above n3 n5) (above n3 n6) (above n3 n7) (above n3 n8) (above n3 n9) (above n3 n10) (above n3 n11) (above n3 n12) (above n3 n13) (above n3 n14) (above n3 n15) (above n3 n16) 
+(above n4 n5) (above n4 n6) (above n4 n7) (above n4 n8) (above n4 n9) (above n4 n10) (above n4 n11) (above n4 n12) (above n4 n13) (above n4 n14) (above n4 n15) (above n4 n16) 
+(above n5 n6) (above n5 n7) (above n5 n8) (above n5 n9) (above n5 n10) (above n5 n11) (above n5 n12) (above n5 n13) (above n5 n14) (above n5 n15) (above n5 n16) 
+(above n6 n7) (above n6 n8) (above n6 n9) (above n6 n10) (above n6 n11) (above n6 n12) (above n6 n13) (above n6 n14) (above n6 n15) (above n6 n16) 
+(above n7 n8) (above n7 n9) (above n7 n10) (above n7 n11) (above n7 n12) (above n7 n13) (above n7 n14) (above n7 n15) (above n7 n16) 
+(above n8 n9) (above n8 n10) (above n8 n11) (above n8 n12) (above n8 n13) (above n8 n14) (above n8 n15) (above n8 n16) 
+(above n9 n10) (above n9 n11) (above n9 n12) (above n9 n13) (above n9 n14) (above n9 n15) (above n9 n16) 
+(above n10 n11) (above n10 n12) (above n10 n13) (above n10 n14) (above n10 n15) (above n10 n16) 
+(above n11 n12) (above n11 n13) (above n11 n14) (above n11 n15) (above n11 n16) 
+(above n12 n13) (above n12 n14) (above n12 n15) (above n12 n16) 
+(above n13 n14) (above n13 n15) (above n13 n16) 
+(above n14 n15) (above n14 n16) 
+(above n15 n16) 
+
+(lift-at fast0 n16)
+(passengers fast0 n0)
+(can-hold fast0 n1) (can-hold fast0 n2) (can-hold fast0 n3) (can-hold fast0 n4) 
+(reachable-floor fast0 n0)(reachable-floor fast0 n4)(reachable-floor fast0 n8)(reachable-floor fast0 n12)(reachable-floor fast0 n16)
+
+(lift-at fast1 n8)
+(passengers fast1 n0)
+(can-hold fast1 n1) (can-hold fast1 n2) (can-hold fast1 n3) (can-hold fast1 n4) 
+(reachable-floor fast1 n0)(reachable-floor fast1 n4)(reachable-floor fast1 n8)(reachable-floor fast1 n12)(reachable-floor fast1 n16)
+
+(lift-at slow0-0 n5)
+(passengers slow0-0 n0)
+(can-hold slow0-0 n1) (can-hold slow0-0 n2) (can-hold slow0-0 n3) 
+(reachable-floor slow0-0 n0)(reachable-floor slow0-0 n1)(reachable-floor slow0-0 n2)(reachable-floor slow0-0 n3)(reachable-floor slow0-0 n4)(reachable-floor slow0-0 n5)(reachable-floor slow0-0 n6)(reachable-floor slow0-0 n7)(reachable-floor slow0-0 n8)
+
+(lift-at slow1-0 n13)
+(passengers slow1-0 n0)
+(can-hold slow1-0 n1) (can-hold slow1-0 n2) (can-hold slow1-0 n3) 
+(reachable-floor slow1-0 n8)(reachable-floor slow1-0 n9)(reachable-floor slow1-0 n10)(reachable-floor slow1-0 n11)(reachable-floor slow1-0 n12)(reachable-floor slow1-0 n13)(reachable-floor slow1-0 n14)(reachable-floor slow1-0 n15)(reachable-floor slow1-0 n16)
+
+(passenger-at p0 n16)
+(passenger-at p1 n7)
+(passenger-at p2 n0)
+(passenger-at p3 n0)
+(passenger-at p4 n10)
+(passenger-at p5 n15)
+(passenger-at p6 n8)
+(passenger-at p7 n14)
+(passenger-at p8 n4)
+(passenger-at p9 n12)
+(passenger-at p10 n12)
+(passenger-at p11 n4)
+(passenger-at p12 n6)
+(passenger-at p13 n12)
+(passenger-at p14 n2)
+(passenger-at p15 n15)
+(passenger-at p16 n14)
+(passenger-at p17 n2)
+(passenger-at p18 n12)
+(passenger-at p19 n10)
+(passenger-at p20 n7)
+(passenger-at p21 n16)
+(passenger-at p22 n2)
+(passenger-at p23 n16)
+(passenger-at p24 n10)
+(passenger-at p25 n13)
+
+(= (travel-slow-temp n0 n1) 12) (= (travel-slow-temp n0 n2) 20) (= (travel-slow-temp n0 n3) 28) (= (travel-slow-temp n0 n4) 36) (= (travel-slow-temp n0 n5) 44) (= (travel-slow-temp n0 n6) 52) (= (travel-slow-temp n0 n7) 60) (= (travel-slow-temp n0 n8) 68) (= (travel-slow-temp n1 n2) 12) (= (travel-slow-temp n1 n3) 20) (= (travel-slow-temp n1 n4) 28) (= (travel-slow-temp n1 n5) 36) (= (travel-slow-temp n1 n6) 44) (= (travel-slow-temp n1 n7) 52) (= (travel-slow-temp n1 n8) 60) (= (travel-slow-temp n2 n3) 12) (= (travel-slow-temp n2 n4) 20) (= (travel-slow-temp n2 n5) 28) (= (travel-slow-temp n2 n6) 36) (= (travel-slow-temp n2 n7) 44) (= (travel-slow-temp n2 n8) 52) (= (travel-slow-temp n3 n4) 12) (= (travel-slow-temp n3 n5) 20) (= (travel-slow-temp n3 n6) 28) (= (travel-slow-temp n3 n7) 36) (= (travel-slow-temp n3 n8) 44) (= (travel-slow-temp n4 n5) 12) (= (travel-slow-temp n4 n6) 20) (= (travel-slow-temp n4 n7) 28) (= (travel-slow-temp n4 n8) 36) (= (travel-slow-temp n5 n6) 12) (= (travel-slow-temp n5 n7) 20) (= (travel-slow-temp n5 n8) 28) (= (travel-slow-temp n6 n7) 12) (= (travel-slow-temp n6 n8) 20) (= (travel-slow-temp n7 n8) 12) 
+
+(= (travel-slow-temp n8 n9) 12) (= (travel-slow-temp n8 n10) 20) (= (travel-slow-temp n8 n11) 28) (= (travel-slow-temp n8 n12) 36) (= (travel-slow-temp n8 n13) 44) (= (travel-slow-temp n8 n14) 52) (= (travel-slow-temp n8 n15) 60) (= (travel-slow-temp n8 n16) 68) (= (travel-slow-temp n9 n10) 12) (= (travel-slow-temp n9 n11) 20) (= (travel-slow-temp n9 n12) 28) (= (travel-slow-temp n9 n13) 36) (= (travel-slow-temp n9 n14) 44) (= (travel-slow-temp n9 n15) 52) (= (travel-slow-temp n9 n16) 60) (= (travel-slow-temp n10 n11) 12) (= (travel-slow-temp n10 n12) 20) (= (travel-slow-temp n10 n13) 28) (= (travel-slow-temp n10 n14) 36) (= (travel-slow-temp n10 n15) 44) (= (travel-slow-temp n10 n16) 52) (= (travel-slow-temp n11 n12) 12) (= (travel-slow-temp n11 n13) 20) (= (travel-slow-temp n11 n14) 28) (= (travel-slow-temp n11 n15) 36) (= (travel-slow-temp n11 n16) 44) (= (travel-slow-temp n12 n13) 12) (= (travel-slow-temp n12 n14) 20) (= (travel-slow-temp n12 n15) 28) (= (travel-slow-temp n12 n16) 36) (= (travel-slow-temp n13 n14) 12) (= (travel-slow-temp n13 n15) 20) (= (travel-slow-temp n13 n16) 28) (= (travel-slow-temp n14 n15) 12) (= (travel-slow-temp n14 n16) 20) (= (travel-slow-temp n15 n16) 12) 
+
+
+(= (travel-fast-temp n0 n4) 13) (= (travel-fast-temp n0 n8) 17) (= (travel-fast-temp n0 n12) 20) (= (travel-fast-temp n0 n16) 22) 
+
+(= (travel-fast-temp n4 n8) 13) (= (travel-fast-temp n4 n12) 17) (= (travel-fast-temp n4 n16) 20) 
+
+(= (travel-fast-temp n8 n12) 13) (= (travel-fast-temp n8 n16) 17) 
+
+(= (travel-fast-temp n12 n16) 13) 
+
+
+(= (travel-slow-cost n0 n1) 6) (= (travel-slow-cost n0 n2) 7) (= (travel-slow-cost n0 n3) 8) (= (travel-slow-cost n0 n4) 9) (= (travel-slow-cost n0 n5) 10) (= (travel-slow-cost n0 n6) 11) (= (travel-slow-cost n0 n7) 12) (= (travel-slow-cost n0 n8) 13) (= (travel-slow-cost n1 n2) 6) (= (travel-slow-cost n1 n3) 7) (= (travel-slow-cost n1 n4) 8) (= (travel-slow-cost n1 n5) 9) (= (travel-slow-cost n1 n6) 10) (= (travel-slow-cost n1 n7) 11) (= (travel-slow-cost n1 n8) 12) (= (travel-slow-cost n2 n3) 6) (= (travel-slow-cost n2 n4) 7) (= (travel-slow-cost n2 n5) 8) (= (travel-slow-cost n2 n6) 9) (= (travel-slow-cost n2 n7) 10) (= (travel-slow-cost n2 n8) 11) (= (travel-slow-cost n3 n4) 6) (= (travel-slow-cost n3 n5) 7) (= (travel-slow-cost n3 n6) 8) (= (travel-slow-cost n3 n7) 9) (= (travel-slow-cost n3 n8) 10) (= (travel-slow-cost n4 n5) 6) (= (travel-slow-cost n4 n6) 7) (= (travel-slow-cost n4 n7) 8) (= (travel-slow-cost n4 n8) 9) (= (travel-slow-cost n5 n6) 6) (= (travel-slow-cost n5 n7) 7) (= (travel-slow-cost n5 n8) 8) (= (travel-slow-cost n6 n7) 6) (= (travel-slow-cost n6 n8) 7) (= (travel-slow-cost n7 n8) 6) 
+
+(= (travel-slow-cost n8 n9) 6) (= (travel-slow-cost n8 n10) 7) (= (travel-slow-cost n8 n11) 8) (= (travel-slow-cost n8 n12) 9) (= (travel-slow-cost n8 n13) 10) (= (travel-slow-cost n8 n14) 11) (= (travel-slow-cost n8 n15) 12) (= (travel-slow-cost n8 n16) 13) (= (travel-slow-cost n9 n10) 6) (= (travel-slow-cost n9 n11) 7) (= (travel-slow-cost n9 n12) 8) (= (travel-slow-cost n9 n13) 9) (= (travel-slow-cost n9 n14) 10) (= (travel-slow-cost n9 n15) 11) (= (travel-slow-cost n9 n16) 12) (= (travel-slow-cost n10 n11) 6) (= (travel-slow-cost n10 n12) 7) (= (travel-slow-cost n10 n13) 8) (= (travel-slow-cost n10 n14) 9) (= (travel-slow-cost n10 n15) 10) (= (travel-slow-cost n10 n16) 11) (= (travel-slow-cost n11 n12) 6) (= (travel-slow-cost n11 n13) 7) (= (travel-slow-cost n11 n14) 8) (= (travel-slow-cost n11 n15) 9) (= (travel-slow-cost n11 n16) 10) (= (travel-slow-cost n12 n13) 6) (= (travel-slow-cost n12 n14) 7) (= (travel-slow-cost n12 n15) 8) (= (travel-slow-cost n12 n16) 9) (= (travel-slow-cost n13 n14) 6) (= (travel-slow-cost n13 n15) 7) (= (travel-slow-cost n13 n16) 8) (= (travel-slow-cost n14 n15) 6) (= (travel-slow-cost n14 n16) 7) (= (travel-slow-cost n15 n16) 6) 
+
+
+(= (travel-fast-cost n0 n4) 13) (= (travel-fast-cost n0 n8) 25) (= (travel-fast-cost n0 n12) 37) (= (travel-fast-cost n0 n16) 49) 
+
+(= (travel-fast-cost n4 n8) 13) (= (travel-fast-cost n4 n12) 25) (= (travel-fast-cost n4 n16) 37) 
+
+(= (travel-fast-cost n8 n12) 13) (= (travel-fast-cost n8 n16) 25) 
+
+(= (travel-fast-cost n12 n16) 13) 
+
+(= (total-cost) 0)
+
+
+)
+
+(:goal
+(and
+(passenger-at p0 n11)
+(passenger-at p1 n8)
+(passenger-at p2 n14)
+(passenger-at p3 n16)
+(passenger-at p4 n8)
+(passenger-at p5 n16)
+(passenger-at p6 n9)
+(passenger-at p7 n4)
+(passenger-at p8 n2)
+(passenger-at p9 n0)
+(passenger-at p10 n8)
+(passenger-at p11 n1)
+(passenger-at p12 n2)
+(passenger-at p13 n9)
+(passenger-at p14 n1)
+(passenger-at p15 n7)
+(passenger-at p16 n10)
+(passenger-at p17 n3)
+(passenger-at p18 n14)
+(passenger-at p19 n11)
+(passenger-at p20 n4)
+(passenger-at p21 n5)
+(passenger-at p22 n3)
+(passenger-at p23 n14)
+(passenger-at p24 n12)
+(passenger-at p25 n8)
+))
+(:metric (and (minimize (total-time)) (minimize (total-cost))))
+)
+\end{tt}
+
+  
+\end{tiny}
 \end{document}
 
 
